Fix #105942: Wrong text in MeshSequenceCache and Transform Cache

The Alembic procedural was refrenced here even if USD was loaded.

Now check the CacheFile type and let the user know Render Procedurals
are only supported for Alembic atm.